--- a/exp.html
+++ b/exp.html
@@ -8,6 +8,6 @@
 </head>
 <body>
    <img src="./Images/hp.webp" alt="harry trying his best">
-   <figcaption>HARRY using <em>expelliarmus</em></figcaption>
+   <figcaption>HARRY using <strong>expelliarmus</strong></figcaption>
 </body>
 </html>
